--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GamesT</title>
-    <script type="module" crossorigin src="/assets/3Fk0mtgH.js"></script>
+    <script type="module" crossorigin src="/assets/DXzKdGHU.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/BWV67j5j.css">
   </head>
   <body class="bg-white text-black dark:bg-gray-900 dark:text-white overflow-hidden" >
